refactor: use protobuf instead of `jsonl` (#204)
* chore: add bomi in protobuf schema

* refactor: use protobuf APIs in code

* Fix tests

* Make method synchronized

* Revert to concurrent hash map for thread-safety